--- a/tutoriel-web-spring/src/main/webapp/WEB-INF/web.xml
+++ b/tutoriel-web-spring/src/main/webapp/WEB-INF/web.xml
@@ -29,4 +29,15 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	<!-- Declaration de la servlet de Spring et de son mapping -->
+	
+	 <!-- Declaration de l'utilisation de la ressource JDBC -->
+    <resource-ref>
+        <description>Ressource JDBC de l'application</description>
+        <res-ref-name>jdbc/dsMonApplication</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+        <res-sharing-scope>Shareable</res-sharing-scope>
+    </resource-ref>
+    <!-- Declaration de l'utilisation de la ressource JDBC -->
+    
 </web-app>
